--- a/game/css/style.css
+++ b/game/css/style.css
@@ -1,14 +1,19 @@
 body {
     background-color: #70CF51;
     font-family: 'Press Start 2P', cursive;
-    color:white;
-    font-size:22px;
-    overflow:hidden;
-    margin:0px; padding:0px;
+    color: white;
+    font-size: 22px;
+    overflow: hidden;
+    margin: 0px;
+    padding: 0px;
+    width: 100vw;
+    height: 100vh;
+    background-image: url(../images/grass.png);
+    background-size: cover;
 }
 
 script {
-    display:none;
+    display: none;
 }
 
 ball, paddle, background, ui {
@@ -20,27 +25,25 @@ ball, paddle, background, ui {
 
 ball {
     background-image: url(../images/pokeball.png);
-    width:40px; height: 40px;
+    width: 40px;
+    height: 40px;
     cursor: pointer;
 }
 
 paddle {
     background-image: url(../images/paddle.png);
-    width:25px; height:100px;
+    width: 25px;
+    height: 100px;
 }
 
-background {
-    background-image: url(../images/grass.png);
-    width:100%; height: 100%;
-    background-size: cover;
-}
+
 
 ui {
-    font-size:42px;
+    font-size: 42px;
     text-shadow: 8px 8px 0px black;
-    color:white;
-    padding:20px;
-    margin:15px;
-    width:100%;
+    color: white;
+    padding: 20px;
+    margin: 15px;
+    width: 100%;
     text-align: center;
 }
